--- a/css/f.c.q.css
+++ b/css/f.c.q.css
@@ -11,6 +11,10 @@
     --main-top : 10px ;
     --main-bottom : 50px ;
 }
+::-webkit-scrollbar {width: 15px;}
+::-webkit-scrollbar-track {background-color: var(--main-color-alt);}
+::-webkit-scrollbar-thumb {background-color:#85153f8a;}
+::-webkit-scrollbar-thumb:hover {background-color:var(--main-color) ;}
 html {
     scroll-behavior: smooth;
 }
@@ -110,6 +114,53 @@ header .container .image img {width: 70px;max-width: 100%;}
 @media (max-width:992px) {.Aboutus .container .cont .text {flex-direction: column;}.Aboutus .container .cont .text .images img {margin: auto;margin-top: 20px;}}
 @media (max-width:767px) {.Aboutus .container .cont .text ul li {font-size: 18px;}}
 /* end Aboutus */
+
+/* start Achievements */
+.Achievements {padding-top: var(--main-top);padding-bottom: var(--main-bottom);color:white;background-color: var(--main-color);position: relative;}
+.Achievements::before {content: "";background-image: url(../images/footpall002.png);width: 100%;min-height: 100vh;position: absolute;top: 20px;right: 0px ;}
+.Achievements .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;}
+.Achievements .container .Achiev { margin-top: 80px;margin-bottom: 80px;text-align: center;border: 4px solid white;padding:10px 100px; border-radius:50% ; -webkit-border-radius:; -moz-border-radius:; -ms-border-radius:; -o-border-radius:; }
+.Achievements .container .Achiev h2 {font-size: 60px;}
+.Achievements .container .Achiev h3 {font-size: 40px;}
+@media (max-width:992px) {.Achievements .container .Achiev {margin: auto;margin-bottom: 20px;}}
+/* end Achievements */
+
+/* start video */
+.video {position: relative;}
+.video::before {position: absolute;top: 0;right: 0;width: 100%;height: 100%;background-color: rgba(0, 0, 0, 60%);content: "";}
+.video video {width: 100%;max-width: 100%;}
+.video .text { position: absolute;text-align: center; background-color: #85153f8a; width: 100%; padding: 50px; top: 50%; right: 0; transform:translateY(-50%) ; -webkit-transform:translateY(-50%) ; -moz-transform:translateY(-50%) ; -ms-transform:translateY(-50%) ; -o-transform:translateY(-50%) ; }
+.video .text h3 {color: white;font-size: 40px;}
+.video .text p  {color: white;font-weight: bold;}
+@media (max-width:992px) {.video .text {padding: 10px;}.video .text h3 {font-size: 28px;}.video .text p  {font-size:10px;}}
+/* end video */
+
+/* start contactus */
+.contactus {padding-top: var(--main-top);padding-bottom: var(--main-bottom);background-color: var(--main-color-alt);color: var(--main-color);position: relative;}
+.contactus::before {content: "";background-image: url(../images/footpall.png);width: 100%;height: 100%;position: absolute;top: 20px;right: 0px ;}
+.contactus .container {display:flex;flex-direction: column;justify-content: space-between;align-items: center;}
+.contactus .container .text {margin-bottom: 120px;}
+.contactus .container .text h3 {font-size: 20px;}
+.contactus .container form {direction: ltr;z-index: 100;}
+.contactus .container form input[type="email"] { ;border: 1px solid white; border-right: none; background:white; padding: 10px 20px 10px 60px; caret-color:var(--main-color); width: calc(100% - 130px); border-radius:15px 0 0 15px ; -webkit-border-radius:15px 0 0 15px ; -moz-border-radius:15px 0 0 15px ; -ms-border-radius:15px 0 0 15px ; -o-border-radius:15px 0 0 15px ; }
+.contactus .container form input[type="submit"] {; width: 126px; background-color: var(--main-color); color: white; padding: 10px 20px; border: 1px solid white; border-left: none; text-transform: uppercase; border-radius:0 15px 15px 0 ; -webkit-border-radius:0 15px 15px 0 ; -moz-border-radius:0 15px 15px 0 ; -ms-border-radius:0 15px 15px 0 ; -o-border-radius:0 15px 15px 0 ; }
+/* end contactus */
+
+/* start footer */
+.footer {padding-top: var(--main-top);padding-bottom: var(--main-bottom);position: relative;color: white;background-color: #222222;}
+.footer .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;position: relative;gap: 10px;}
+.footer .container .text {max-width: 270px;}
+.footer .container .text .qau h1 {font-size: 18px;}
+.footer .container .text .men li {font-size: 14px;padding: 10px;}
+.footer .container .text .such {}
+.footer .container .text .such i { cursor: pointer;margin-right: 20px;padding:10px;font-size: 15px; border: 3px solid white; border-radius:50% ; -webkit-border-radius:; -moz-border-radius:; -ms-border-radius:; -o-border-radius:; }
+.footer .container .map iframe {padding: 5px;}
+.footer .container .dvlop {direction: ltr;}
+.footer .container .dvlop h5 {font-size: 20px;}
+.footer .container .dvlop li {font-size: 15px;padding: 10px;}
+@media (max-width:992px) {.footer .container {flex-direction: column;text-align: center;}.footer .container .map iframe {margin-top: 10px;}}
+@media (max-width:767px) {.footer .container .map iframe {width: 350px;}}
+/* end footer */
 
 
 
