--- a/css/f.c.q.css
+++ b/css/f.c.q.css
@@ -121,7 +121,7 @@ header .container .image img {width: 70px;max-width: 100%;}
 .Achievements {padding-top: var(--main-top);padding-bottom: var(--main-bottom);color:white;background-color: var(--main-color);position: relative;}
 .Achievements::before {content: "";background-image: url(../images/footpall002.png);width: 100%;min-height: 100vh;position: absolute;top: 20px;right: 0px ;}
 .Achievements .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;}
-.Achievements .container .Achiev { margin-top: 80px;margin-bottom: 80px;text-align: center;border: 4px solid white;padding:10px 100px; border-radius:50% ; -webkit-border-radius:; -moz-border-radius:; -ms-border-radius:; -o-border-radius:; }
+.Achievements .container .Achiev { margin-top: 80px;margin-bottom: 80px;text-align: center;border: 4px solid white;padding:10px 100px; border-radius:50% ; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%; }
 .Achievements .container .Achiev h2 {font-size: 60px;}
 .Achievements .container .Achiev h3 {font-size: 40px;}
 @media (max-width:992px) {.Achievements .container .Achiev {margin: auto;margin-bottom: 20px;}}
@@ -144,21 +144,22 @@ header .container .image img {width: 70px;max-width: 100%;}
 .contactus .container .text {margin-bottom: 120px;}
 .contactus .container .text h3 {font-size: 20px;}
 .contactus .container form {direction: ltr;z-index: 100;}
-.contactus .container form input[type="email"] { ;border: 1px solid white; border-right: none; background:white; padding: 10px 20px 10px 60px; caret-color:var(--main-color); width: calc(100% - 130px); border-radius:15px 0 0 15px ; -webkit-border-radius:15px 0 0 15px ; -moz-border-radius:15px 0 0 15px ; -ms-border-radius:15px 0 0 15px ; -o-border-radius:15px 0 0 15px ; }
-.contactus .container form input[type="submit"] {; width: 126px; background-color: var(--main-color); color: white; padding: 10px 20px; border: 1px solid white; border-left: none; text-transform: uppercase; border-radius:0 15px 15px 0 ; -webkit-border-radius:0 15px 15px 0 ; -moz-border-radius:0 15px 15px 0 ; -ms-border-radius:0 15px 15px 0 ; -o-border-radius:0 15px 15px 0 ; }
+.contactus .container form input[type="email"] { border: 1px solid white; border-right: none; background:white; padding: 10px 20px 10px 60px; caret-color:var(--main-color); width: calc(100% - 126px); border-radius:15px 0 0 15px ; -webkit-border-radius:15px 0 0 15px ; -moz-border-radius:15px 0 0 15px ; -ms-border-radius:15px 0 0 15px ; -o-border-radius:15px 0 0 15px ; }
+.contactus .container form input[type="submit"] { width: 120px; background-color: var(--main-color); color: white; padding: 10px 20px; border: 1px solid white; border-left: none; text-transform: uppercase; border-radius:0 15px 15px 0 ; -webkit-border-radius:0 15px 15px 0 ; -moz-border-radius:0 15px 15px 0 ; -ms-border-radius:0 15px 15px 0 ; -o-border-radius:0 15px 15px 0 ; }
+@media (max-width:767px) {.contactus .container form input[typ="submit"] {width: 100px;}}
 /* end contactus */
 
 /* start Navigation */
 .Navigation {background-color: var(--main-color);padding-top: var(--main-top);padding-bottom: var(--main-bottom);position: relative;}
 .Navigation::before {content: "";background-image: url(../images/footpall002.png);width: 100%;min-height: 100vh;position: absolute;top: 20px;right: 0px ;}
-.Navigation .container {background-color:;}
+.Navigation .container {}
 .Navigation .container .rounded {background: none;}
 .Navigation .container .rounded p {color: white;}
 .Navigation .container .rounded .d-none {}
 .Navigation .container .rounded .d-none .row {background-color:var(--main-color-alt)}
 .Navigation .container .rounded .d-none .row table {}
 .Navigation .container .rounded .d-none .row table tbody {}
-.Navigation .container .rounded .d-none .row table tbody tr {;}
+.Navigation .container .rounded .d-none .row table tbody tr {}
 .Navigation .container .rounded .d-none .row table tbody tr td {color:#85153f;}
 .Navigation .container .rounded .d-none .row table tbody tr td a { color:black;}
 /* end Navigation */
@@ -170,7 +171,7 @@ header .container .image img {width: 70px;max-width: 100%;}
 .footer .container .text .qau h1 {font-size: 18px;}
 .footer .container .text .men li {font-size: 14px;padding: 10px;}
 .footer .container .text .such {}
-.footer .container .text .such i { cursor: pointer;margin-right: 20px;padding:10px;font-size: 15px; border: 3px solid white; border-radius:50% ; -webkit-border-radius:; -moz-border-radius:; -ms-border-radius:; -o-border-radius:; }
+.footer .container .text .such i { cursor: pointer; margin-right: 20px; padding:10px; font-size: 15px; border: 3px solid white; border-radius:50% ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; }
 .footer .container .map iframe {padding: 5px;}
 .footer .container .dvlop {direction: ltr;}
 .footer .container .dvlop h5 {font-size: 20px;}
