--- a/css/f.c.q.css
+++ b/css/f.c.q.css
@@ -54,7 +54,7 @@ ul {
     }
 }
 .main-heading {text-align: center;margin-bottom: 80px;}
-.main-heading h2 {font-size: 40px;}
+.main-heading h2 {font-size: 40px;line-height: 2;}
 .main-heading p  {font-size: 20px;line-height: 2;}
 /* end global rulse */
 /* ---------------------------- */
@@ -142,7 +142,7 @@ header .container .image img {width: 70px;max-width: 100%;}
 .contactus::before {content: "";background-image: url(../images/footpall.png);width: 100%;height: 100%;position: absolute;top: 20px;right: 0px ;}
 .contactus .container {display:flex;flex-direction: column;justify-content: space-between;align-items: center;}
 .contactus .container .text {margin-bottom: 120px;}
-.contactus .container .text h3 {font-size: 20px;}
+.contactus .container .text h3 {font-size: 20px;line-height: 2;}
 .contactus .container form {direction: ltr;z-index: 100;}
 .contactus .container form input[type="email"] { border: 1px solid white; border-right: none; background:white; padding: 10px 20px 10px 60px; caret-color:var(--main-color); width: calc(100% - 126px); border-radius:15px 0 0 15px ; -webkit-border-radius:15px 0 0 15px ; -moz-border-radius:15px 0 0 15px ; -ms-border-radius:15px 0 0 15px ; -o-border-radius:15px 0 0 15px ; }
 .contactus .container form input[type="submit"] { width: 120px; background-color: var(--main-color); color: white; padding: 10px 20px; border: 1px solid white; border-left: none; text-transform: uppercase; border-radius:0 15px 15px 0 ; -webkit-border-radius:0 15px 15px 0 ; -moz-border-radius:0 15px 15px 0 ; -ms-border-radius:0 15px 15px 0 ; -o-border-radius:0 15px 15px 0 ; }
@@ -151,12 +151,12 @@ header .container .image img {width: 70px;max-width: 100%;}
 
 /* start Navigation */
 .Navigation {background-color: var(--main-color);padding-top: var(--main-top);padding-bottom: var(--main-bottom);position: relative;}
-.Navigation::before {content: "";background-image: url(../images/footpall002.png);width: 100%;min-height: 100vh;position: absolute;top: 20px;right: 0px ;}
-.Navigation .container {}
+.Navigation::before {content: "";background-image: url(../images/footpall002.png);width: 100%;height: 100%;position: absolute;top: 20px;right: 0px ;z-index: 1;}
+.Navigation .container {position: relative;z-index: 100;}
 .Navigation .container .rounded {background: none;}
-.Navigation .container .rounded p {color: white;}
+.Navigation .container .rounded p {color: white;line-height: 2;}
 .Navigation .container .rounded .d-none {}
-.Navigation .container .rounded .d-none .row {background-color:var(--main-color-alt)}
+.Navigation .container .rounded .d-none .row {background-color:var(--main-color-alt);}
 .Navigation .container .rounded .d-none .row table {}
 .Navigation .container .rounded .d-none .row table tbody {}
 .Navigation .container .rounded .d-none .row table tbody tr {}
