--- a/css/f.c.q.css
+++ b/css/f.c.q.css
@@ -22,7 +22,7 @@ body {
     font-family: 'Cairo', sans-serif;
 }
 a {
-    text-decoration: none;
+    text-decoration: none;color: white;
 }
 ul {
     list-style: none;
@@ -59,10 +59,8 @@ ul {
 /* end global rulse */
 /* ---------------------------- */
 /* start header */
-header {top: 0;left: 0;width: 100%;height: 100%;z-index: 110;margin: auto;position: fixed;}
-header::before {content: "";top: 0;right: 0;width: 100%;height:18%;background-image: linear-gradient(rgba(0 0 0 / 100%),rgba(0 0 0 / 70%),rgba(0 0 0 / 0%));position: absolute;z-index:100;}
-
-header .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;position: relative;margin-top: 20px;z-index: 150;}
+header {top: 0;left: 0;width: 100%;height: 100%;z-index: 110;margin: auto;position: absolute;}
+header .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;position: relative;margin-top: 20px;}
 header .container::before {content: "";background-color: white;height: 1px;width: calc(100% - 50px);position: absolute;bottom: -20px;left: 15px;}
 header .container ul {display: flex;}
 header .container ul li {position: relative;}
@@ -71,7 +69,7 @@ header .container ul li a:hover {color: #85153f;}
 header .container ul li:first-child a {color: var(--main-color);}
 header .container .image img {width: 70px;max-width: 100%;}
 @media (max-width:992px) {header .container {flex-direction: column;} header .container .image {order: -1;margin-bottom: 20px;}header {position: absolute;}}
-@media (max-width:767px) { header .container ul li a {padding: 4px;font-size: 8px;}header {position: absolute;}}
+@media (max-width:767px) { header .container ul li a {padding: 4px;font-size: 8px;}}
 /* end header */
 
 /* start landing */
@@ -171,11 +169,13 @@ header .container .image img {width: 70px;max-width: 100%;}
 .footer .container .text .qau h1 {font-size: 18px;}
 .footer .container .text .men li {font-size: 14px;padding: 10px;}
 .footer .container .text .such {}
-.footer .container .text .such i { cursor: pointer; margin-right: 20px; padding:10px; font-size: 15px; border: 3px solid white; border-radius:50% ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; }
+.footer .container .text .such i { color: white; margin-right: 20px; padding:10px; font-size: 15px; border: 3px solid white; border-radius:50% ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; }
+.footer .container .text .such i a {color: white;}
 .footer .container .map iframe {padding: 5px;}
 .footer .container .dvlop {direction: ltr;}
 .footer .container .dvlop h5 {font-size: 20px;}
 .footer .container .dvlop li {font-size: 15px;padding: 10px;}
+.footer .container .dvlop li a {}
 @media (max-width:992px) {.footer .container {flex-direction: column;text-align: center;}.footer .container .map iframe {margin-top: 10px;}}
 @media (max-width:767px) {.footer .container .map iframe {width: 300px;}}
 /* end footer */
