--- a/css/f.c.q.css
+++ b/css/f.c.q.css
@@ -164,7 +164,7 @@ header .container .image img {width: 70px;max-width: 100%;}
 /* end Navigation */
 
 /* start footer */
-.footer {padding-top: var(--main-top);padding-bottom: var(--main-bottom);position: relative;color: white;background-color: #222222;}
+.footer {position: relative;color: white;background-color: #222222;padding-top:10px;padding-bottom: 10px;}
 .footer .container {display: flex;justify-content: space-between;align-items: center;flex-wrap: wrap;position: relative;gap: 10px;}
 .footer .container .text {max-width: 270px;}
 .footer .container .text .qau h1 {font-size: 18px;}
@@ -177,9 +177,11 @@ header .container .image img {width: 70px;max-width: 100%;}
 .footer .container .dvlop {direction: ltr;}
 .footer .container .dvlop h5 {font-size: 20px;}
 .footer .container .dvlop li {font-size: 15px;padding: 10px;}
-.footer .container .dvlop li a {}
-.footer .container .dvlop li a:hover { color: rgb(0, 200, 255);}
 .footer .container .dvlop li span { font-size: 30px;}
+.footer .container .text .such .fa-facebook-f:hover {color: #5988e0;}
+.footer .container .text .such .fa-twitter:hover { color: rgb(0, 200, 255);}
+.footer .container .text .such .fa-home:hover {color: #85153f;}
+.footer .container .text .such .fa-linkedin:hover {color: #807ed7;}
 @media (max-width:992px) {.footer .container {flex-direction: column;text-align: center;}.footer .container .map iframe {margin-top: 10px;}}
 @media (max-width:767px) {.footer .container .map iframe {width: 300px;}}
 /* end footer */
